# sdl2-playground

./: .gitignore  README.md  run
0_texturestream/: CMakeLists.txt
0_texturestream/src/: main.c
1_renderthread/: CMakeLists.txt
1_renderthread/src/: main.c
